# anoma-rust-setup

./: .env.example  .gitignore  Cargo.toml  README.md  start-dev.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AliceBobTest.tsx  Counter.tsx  DerivationWalletTest.tsx  Navigation.tsx  SignatureDeterminismTest.tsx  VerboseKeyDisplay.tsx  WalletConnect.tsx  WalletSetup.tsx
frontend/src/hooks/: useCounter.ts  useWallet.ts
frontend/src/pages/: HomePage.tsx  LogInPage.tsx  SignUpPage.tsx  TestingPage.tsx  TransferPage.tsx
frontend/src/services/: api.ts  cryptography.ts  derivationWallet.ts  embeddedWallet.ts  passkey.ts  protocolAdapter.ts  wallet.ts
frontend/src/types/: api.ts  metamask.ts
src/: main.rs
static/: index.html
