[package]
name = "counterdotcom"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
#arm = { path = "../arm" }

arm = { path = "/Users/maurice/Heliax/arm-risc0/arm", features = ["logic_circuit", "nif"], default-features = false }
app = { path = "/Users/maurice/Heliax/arm-risc0/examples/simple_counter/app"}