[package]
name = "counterdotcom"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
alloy = { version = "1.0.23", features = ["full"] }
rand = "0.8"
#arm = { path = "../arm" }

arm_risc0 = { path = "/Users/maurice/Heliax/arm-risc0-compatible/arm", package = "arm", features = ["groth16_prover"] }
app = { path = "/Users/maurice/Heliax/arm-risc0-compatible/examples/simple_counter_application/app", package = "counter-app" }
evm_protocol_adapter_bindings = { path = "/Users/maurice/Heliax/evm-protocol-adapter/bindings" }